HW2 revise error

--- a/HW2/Makefile
+++ b/HW2/Makefile
@@ -1,8 +1,8 @@
 server: server.c
-	gcc -o server server.c
+	gcc -o server server.c -lssl -lcrypto
 
 client: client.c
-	gcc -o client client.c
+	gcc -o client client.c -lssl -lcrypto
 
 all: server client
 
