--- a/HW0/Makefile
+++ b/HW0/Makefile
@@ -1,8 +1,8 @@
 server: server.c
-	gcc -o server server.c -lssl -lcrypto
+	gcc -o server server.c
 
 client: client.c
-	gcc -o client client.c -lssl -lcrypto
+	gcc -o client client.c
 
 all: server client
 
